// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddFormInput component tests renders properly 1`] = `
<div>
  <div>
    <label>
      id
    </label>
    <input
      class="form-control is-invalid"
    />
    <div
      class="invalid-feedback"
    >
      Please enter correct value
    </div>
  </div>
</div>
`;

exports[`AddFormInput component tests renders properly with true valid prop 1`] = `
<div>
  <div>
    <label>
      id
    </label>
    <input
      class="form-control is-valid"
    />
    <div
      class="invalid-feedback"
    >
      Please enter correct value
    </div>
  </div>
</div>
`;
